@@ -17,3 +17,5 @@ img/net_3.png
 img/gplv3.png
 img/spinner_dark.png
 img/spinner_light.png
+img/random_dark.png
+img/random_light.png
