@@ -4,6 +4,8 @@ v1.0.0:
  - re-add light theme & make it the default
  - add log spliting: logs get split into multiple files sorted on age
  - add a download speed and ETA field while installing titles
+ - add random title button
+ - improve utf8 handling
  - fix issue where categories weren't sorted as on website
  - fix issue where closing the app from home would freeze the system
  - fix issue where spamming toggle on a "true"/"false" setting would crash the system
